# nexec

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bootloader/: Cargo.toml
bootloader/src/: boot_loader.rs  config.rs  detect.rs  main.rs  menu.rs  util.rs
cli/: Cargo.toml
cli/src/: config.rs  detect.rs  entry.rs  install.rs  main.rs  update.rs
hboot-config/: Cargo.toml
hboot-config/src/: lib.rs
nexec-config/: Cargo.toml
