[package]
name = "nexec"
version = "2.3.0"
edition = "2024"
authors = ["person134"]
description = "nexec boot manager installer and management CLI"
license = "MIT"
repository = "https://github.com/person134/nexec.git"
readme = "README.md"
keywords = ["uefi", "bootloader", "boot-manager", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nexec"
path = "src/main.rs"
